Implemented full text search for tips
